Fixed further nav and card alignment issues

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -12,7 +12,7 @@
   padding: 2rem;
   row-gap: 1rem;
 
-  .img {
+  .imgContainer {
     width: 100%;
     height: 50%;
 
