--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -5,13 +5,13 @@
   max-width: 100%;
   min-height: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 20vw);
-  grid-gap: 0.6rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
   justify-content: space-between;
   padding: 2rem 0;
 
   .card {
     height: 640px;
-    width: 20vw;
+    // width: 20vw;
   }
 }
