--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -8,6 +8,9 @@ nav {
   border-bottom: $primary-border;
   top: 0;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navFlex {
@@ -15,11 +18,11 @@ nav {
   max-width: 92rem;
   padding: 0 2rem;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
   position: relative;
-  margin: 0 auto;
 
   h3 {
     font-size: 2.5rem;
@@ -30,9 +33,6 @@ nav {
     object-fit: contain;
     height: 2.5rem;
     width: 2.5rem;
-  }
-
-  img {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
